--- a/public/style.css
+++ b/public/style.css
@@ -1,25 +1,52 @@
-.border {
-  border-style: inset;
-  border-width: 1px;
-  margin: 10px;
+body, html { height: 100% }
+
+.content {
+  flex: 1 0 auto; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
 }
 
-#sampleui {
-  max-width: 450px;
-  margin-left: 5%;
-  height: 100%;
+.nav {
+  background-color: green;
+  box-shadow: 0 5px 0 darkgreen;
+  height: 5vh;
 }
 
-#sampleposting {
-  max-width: 450px;
+.important-text {
+  color: green;
+  font-weight: bold;
+}
+
+#footer-container {
+  margin-bottom: 0px !important;
+  padding: 5vh;
+  background-color: #f5f5f5;
+}
+
+footer {
+  flex-shrink: 0; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
+  background: #42A5F5;
+}
+
+h1 {
+  padding: 10vh 2vh 2vh 2vh;
   text-align: center;
-  margin-left: 5%;
+  color: green;
+  text-shadow:
+   -1px -1px 0 darkgreen,  
+    1px -1px 0 darkgreen,
+    -1px 1px 0 darkgreen,
+     1px 1px 0 darkgreen;
 }
 
-#userstories {
-  margin-left: 5%;
-}
+#book-list-container, #book-details-container { padding: 5% }
 
-form {
-  padding: 5px;
+.mx-auto { width: 50% }
+
+#newCommentForm { margin-top: 1rem }
+
+#newCommentForm { width: 70% }
+
+.deleteBook { margin: 0% 10% 10% 0% }
+
+#main-container {
+  background-color: #eafaee;
 }
