--- a/views/index.html
+++ b/views/index.html
@@ -1,85 +1,94 @@
 <html>
   <head>
-    <title>FCC ISQA Project - Personal Library</title>
-    <meta name="description" content="A cool thing made with HyperDev">
+    <title>Personal Library</title>
+    <meta name="description" content="A personal library made for Free Code Camp">
     <link id="favicon" rel="icon" href="https://hyperdev.com/favicon-app.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/public/style.css">
+    <!-- bootstrap config -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+          crossorigin="anonymous">
   </head>
   <body>
-    <header>
+    <div id="main-container" class="content d-flex flex-column">
+      <header class="nav"></header>
       <h1>
-        <b>ISQA Project</b> - Personal Library
+        Personal Library
       </h1>
-    </header>
-    <br>
-    <div id="userstories">
-      <h2>User stories:</h2>
-      <ol>
-        <li>Nothing from my website will be cached in my client as a security measure.</li>
-        <li>I will see that the site is powered by 'PHP 4.2.0' even though it isn't as a security measure.</li>
-        <li>I can <b>post</b> a <code>title</code> to /api/books to add a book and returned will be the object with the <code>title</code> and a unique <code>_id</code>.</li>
-        <li>I can <b>get</b> /api/books to retrieve an aray of all books containing <code>title</code>, <code>_id</code>, & <code>commentcount</code>.</li>
-        <li>I can <b>get</b> /api/books/{_id} to retrieve a single object of a book containing <code>title</code>, <code>_id</code>, & an array of <code>comments</code> (empty array if no comments present).</li>
-        <li>I can <b>post</b> a <code>comment</code> to /api/books/{_id} to add a comment to a book and returned will be the books object similar to <b>get</b> /api/books/{_id}.</li>
-        <li>I can <b>delete</b> /api/books/{_id} to delete a book from the collection. Returned will be 'delete successful' if successful.</li>
-        <li>If I try to request a book that doesn't exist I will get a 'no book exists' message.</li>
-        <li>I can send a <b>delete</b> request to /api/books to delete all books in the database. Returned will be 'complete delete successful' if successful.</li>
-        <li>All 6 functional tests required are complete and passing.</li>
-      </ol>
-      <br>
-      <img src='https://cdn.gomix.com/d7932c52-287f-4dae-b175-631fef453000%2FScreen%20Shot%202016-12-16%20at%201.35.56%20AM.png' />
-    </div>
-    <hr style='margin: 50px'>
-    <div id ='sampleposting'>
-      <h2 style="text-align: left">Test API responses:</h2>
-      <form action="/api/books" method="post" class="border">
-        <h4>Test post to /api/books</h4>
-        Book Title:<br>
-        <input type="text" name="title" value=""><br>
-        <input type="submit" value="Submit">
-      </form>
-      <form action="" method="post" id="commentTest" class="border">
-        <h4>Test post to /api/books/{bookid}</h4>
-        BookId to comment on:<br>
-        <input type="text" name="id" value="" id="idinputtest"><br>
-        Comment:<br>
-        <input type="text" name="comment" value=""><br>
-        <input type="submit" value="Submit">
-      </form>
-    </div>
-    <hr style='margin: 50px'>
-    <div id='sampleui'>
-      <h2 style="text-align: left">Sample Front-End:</h2>
-      <form id="newBookForm" class="border">
-        <input type="text" id="bookTitleToAdd" name="title" placeholder="New Book Title" style="width: 295px">
-        <button type="submit" value="Submit" id="newBook">Submit New Book!</button>
-      </form>
-      <div id='display'></div>          
-      <div id='bookDetail' class='border'>
-        <p id='detailTitle'>Select a book to see it's details and comments</p>
-        <ol id='detailComments'></ol>
+      <hr style="margin: 5vh">
+      <div id="list-detail-container" class="d-flex flex-column justify-content-center">
+        <div id="book-list-container">
+        <h4 class="text-center">Book List:</h4>
+        <form id="newBookForm">
+          <div class="input-group">
+            <input id="bookTitleToAdd" type="text" class="form-control" name="title" placeholder="New Book" aria-label="New Book" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+              <button id="newBook" class="btn btn-success addComment" type="submit" value="Submit">Add</button>
+            </div>
+          </div>
+        </form>
+          <div id="book-list"></div>  
+        </div>
+        <hr id="rule-middle" style="margin: 5vh">
+        <div id="book-details-container">
+          <h4 class="text-center" >Book Details</h4>
+          <div id="bookDetail" class="card">
+            <div id="detailTitle" class="card-header">
+              Select a book to see it's details and comments
+            </div>
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Comments</h5>
+              <ol id="detailComments" class="card-text list-group"></ol>
+            </div>
+            <div id="detailOptions" class="d-flex flex-column"></div>
+          </div>
+        </div>
       </div>
-      <button id='deleteAllBooks'>Delete all books...</button>
+      <button id="deleteAllBooks" type="button" class="btn btn-Danger mx-auto">Delete all books...</button>
+      <hr style="margin: 5vh">
     </div>
-    <hr style='margin: 50px'>
-
+    <footer class="footer text-center">
+      <p id="footer-container">
+        Created by <span class="important-text">Robby East</span> as part of <span class="important-text">Free Code Camp</span> project provided <a href="https://learn.freecodecamp.org/information-security-and-quality-assurance/information-security-and-quality-assurance-projects/personal-library/">here</a>
+      </p>
+    </footer>
+    <!-- Your web-app is https, so your scripts need to be too -->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
             crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" 
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
+            crossorigin="anonymous"></script>
+    <!-- internal script to handle jquery and ajax request-->
     <script src="/public/client.js"></script>           
     <script>
-      /*
-      *  For #sampleposting to update form action url to test inputs book id
-      */
-      $(function() {
-       $('#commentTest').submit(function(){
-         var id = $('#idinputtest').val();
-         $(this).attr('action', "/api/books/" + id);
-       });
+      // handle styling when user selects book list items
+      $('#book-list').on('click','.list-group-item-action', function() {    
+        // reset colors to default
+        $('.list-group-item-action').css('background-color', 'white')
+        $('.list-group-item-action').css('color', 'black')
+        $(".badge").removeClass( "badge-light" ).addClass( "badge-dark" )
+        // update new colors for selected element
+        $(this).css('background-color', 'green')
+        $(this).css('color', 'white')
+        $(this).children(".badge").removeClass( "badge-dark" ).addClass( "badge-light" );
       });
-   </script>
+      // refresh the page when the user deletes all the books
+      $('#deleteAllBooks').click(function() {
+        location.reload();
+      });   
+      // refresh the page when the user adds a new book
+      $('#newBook').click(function() {
+        location.reload();
+      });
+    </script>
   </body>
 </html>
